--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile files('libs/gson-2.3.1.jar')
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.lzy.net:okgo:2.1.4'
+    compile 'com.lzy.net:okrx:+'
     compile 'com.zhy:base-rvadapter:3.0.3'
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.jakewharton:butterknife:8.4.0'
